--- a/css/menu/Servers.css
+++ b/css/menu/Servers.css
@@ -13,14 +13,14 @@
 {
 	margin-right: 5px;
 	margin-bottom: 5px;
-	background-color: #efefef;
+	background-color: #081119;
 	padding: 5px 20px;
 	border-radius: 3px;
 	cursor: pointer;
 	position: relative;
 	height: 34px;
 	overflow: hidden;
-	background-image: -webkit-linear-gradient(bottom, rgb(230,230,230) 1%, rgb(240,240,240) 99%);
+	color: #888;
 }
 
 .gamemode:hover
@@ -36,6 +36,7 @@
 	top: 5px;
 	font-size: 20px;
 	white-space: nowrap;
+	color: #888;
 }
 
 .gamemode .stats
@@ -46,6 +47,7 @@
 	position: absolute;
 	bottom: 3px;
 	left: 43px;
+	color: #888;
 }
 
 .gamemode IMG
@@ -402,7 +404,8 @@ SPAN.installgamemode:hover
 .server_gamemodes
 {
 	top: 64px; 
-	border: 5px solid white;
+	border: 5px solid #081119;
+	background-color: black;
 }
 
 @media screen and (min-width: 1280px)
