Fixed a bug where it would change the newGame menu

--- a/template/main.html
+++ b/template/main.html
@@ -18,7 +18,7 @@
 				
 				<li>&nbsp;</li>
 				
-				<li><div class="dropdown">
+				<li><div class="dropdowns">
 				  <a href="www.mysite.com" onclick="dropDown()" class="dropbtn">▼Quick Join▼</a>
 				  <div id="myDropdown" class="dropdown-content">
 					<a ng-click="JoinGame( 'play.zarpgaming.com')" ng-Tranny="'ZARP - S1'"></a><br>
